<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  tools:context=".main.profile.settting.MyInformationActivity">

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <include
      android:id="@+id/app_toolbar"
      layout="@layout/signup_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:elevation="1dp" />
  </FrameLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginTop="80dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <FrameLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

      <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_profile_logo"
        />

      <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="bottom|right"
        android:background="@drawable/ic_profile_edit" />

    </FrameLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:layout_marginBottom="10dp"
      android:gravity="center"
      android:text="@string/profile_image_change"
      android:textSize="18dp" />

    <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="15dp">
      <TableRow
        android:layout_marginTop="10dp">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginRight="15dp"
          android:text="@string/email_"
          android:textSize="17dp"/>
        <TextView
          android:id="@+id/emailTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="zzz"
          android:textSize="17dp"/>
      </TableRow>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
      <TableRow
        android:layout_marginTop="10dp">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/nick_name"
          android:textSize="17dp"/>
        <TextView
          android:id="@+id/nickNameTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="zzz"
          android:textSize="17dp"/>
      </TableRow>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
      <TableRow
        android:layout_marginTop="10dp">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/age_"
          android:textSize="17dp"/>
        <TextView
          android:id="@+id/ageTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="zzz"
          android:textSize="17dp"/>
      </TableRow>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
      <TableRow
        android:layout_marginTop="10dp">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/gender_"
          android:textSize="17dp"/>
        <TextView
          android:id="@+id/genderTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="zzz"
          android:textSize="17dp"/>
      </TableRow>
      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    </TableLayout>
  </LinearLayout>
  <Button
    android:id="@+id/profileChangeButton"
    style="@style/buttonText"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/button_background"
    android:text="@string/confirmation" />

</LinearLayout>