<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <Toolbar
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    android:contentInsetStart="0dp"
    android:elevation="1dp">

    <TextView
      style="@style/appBarText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/map_record" />
  </Toolbar>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:descendantFocusability="blocksDescendants"
      android:orientation="vertical">

      <RelativeLayout
        android:id="@+id/mapnamehorizontallayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textline_background_down"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp">

        <TextView
          android:id="@+id/informationTextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/mapinformation"
          style="@style/subjectName"/>

        <LinearLayout
          android:layout_below="@+id/informationTextView"
          android:id="@+id/linearlayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:orientation="horizontal">

          <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/rankRecyclerProfileImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_profile_logo"
            app:civ_border_color="@color/gray"
            app:civ_border_width="1dp" />

          <TextView
            android:id="@+id/rankRecyclerNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:textColor="@color/lightblack"
            android:textSize="18dp" />
        </LinearLayout>

        <TextView
          android:id="@+id/rankRecyclerHeartCount"
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="40dp"
          android:layout_marginRight="10dp"
          android:layout_toLeftOf="@+id/rankRecyclerHeart"
          android:gravity="right"
          android:includeFontPadding="false"
          android:textColor="@color/blackgray"
          android:textSize="20dp" />

        <ImageView
          android:id="@+id/rankRecyclerHeart"
          android:layout_width="23dp"
          android:layout_height="23dp"
          android:layout_alignParentRight="true"
          android:layout_marginTop="40dp"
          android:src="@drawable/ic_favorite_border_black_24dp" />

        <TextView
          android:id="@+id/rankRecyclerExecuteCount"
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:layout_below="@id/rankRecyclerHeartCount"
          android:layout_marginTop="15dp"
          android:layout_marginRight="10dp"
          android:layout_toLeftOf="@+id/rankRecyclerExecute"
          android:gravity="right"
          android:includeFontPadding="false"
          android:textColor="@color/blackgray"
          android:textSize="20dp" />

        <ImageView
          android:id="@+id/rankRecyclerExecute"
          android:layout_width="23dp"
          android:layout_height="23dp"
          android:layout_below="@id/rankRecyclerHeart"
          android:layout_alignParentRight="true"
          android:layout_marginTop="15dp"
          android:src="@drawable/ic_sneaker_for_running" />

        <TextView
          android:layout_marginLeft="0dp"
          android:layout_marginRight="0dp"
          android:id="@+id/divide"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:layout_below="@+id/linearlayout"
          style="@style/divisionTextView"/>

        <TextView
          android:layout_marginLeft="10dp"
          android:id="@+id/mapnameTextView"
          android:layout_below="@id/divide"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/mapname"/>

        <TextView
          android:paddingBottom="20dp"
          android:layout_below="@+id/mapnameTextView"
          android:id="@+id/rankRecyclerMapTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="10dp"
          android:textColor="@color/lightblack"
          android:textSize="18dp" />


        <TextView
          android:id="@+id/rankRecyclerHeartSwitch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="off"
          android:visibility="gone" />

      </RelativeLayout>

      <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <ImageView
          android:id="@+id/rankRoutePriview"
          android:layout_width="match_parent"
          android:layout_height="300dp"
          android:background="@drawable/textline_background_down"
          android:scaleType="fitXY" />

        <Button
          android:id="@+id/rankRecyclerMoreButton"
          style="@style/buttonText"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:layout_alignParentRight="true"
          android:layout_alignParentBottom="true"
          android:layout_marginRight="15dp"
          android:layout_marginBottom="15dp"
          android:background="@drawable/button_background"
          android:gravity="center"
          android:paddingLeft="20dp"
          android:paddingRight="20dp"
          android:text="@string/learn_more" />
      </RelativeLayout>


      <!--
      <TextView
        android:layout_marginTop="10dp"
        android:background="@drawable/textlines"
        android:id="@+id/topplayertextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:text="@string/top_player"
        android:textSize="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
        -->

      <LinearLayout
        android:id="@+id/infolayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textline_background_up"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp">

        <TextView
          style="@style/ListTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.4"
          android:gravity="left"
          android:text="@string/rank" />

        <TextView
          style="@style/ListTitle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:gravity="left"
          android:text="@string/player" />

        <TextView
          style="@style/ListTitle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center"
          android:text="@string/laptime" />
      </LinearLayout>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rankRecyclerItemClickRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/infolayout"
        android:background="@drawable/textlines"
        android:paddingLeft="20dp"
        android:paddingTop="1dp"
        android:paddingRight="20dp"
        android:paddingBottom="1dp" />

    </LinearLayout>
  </androidx.core.widget.NestedScrollView>

</LinearLayout>
